Implement user management features; add user creation, profile retrieval, and update methods in UserFacade and UserService, along with corresponding request and response classes