@@ -4,6 +4,7 @@ import com.dungpham.asm1.infrastructure.aspect.Logged;
 import com.dungpham.asm1.infrastructure.security.SecurityUserDetails;
 import com.dungpham.asm1.service.JwtTokenService;
 import io.jsonwebtoken.*;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.stereotype.Service;
@@ -14,6 +15,7 @@ import java.util.List;
 import java.util.Map;
 
 @Service
+@Slf4j
 public class JwtTokenServiceImpl implements JwtTokenService {
     @Value("${spring.jwt.secretKey}")
     private String secretKey;
@@ -39,21 +41,30 @@ public class JwtTokenServiceImpl implements JwtTokenService {
         if (null == token) return false;
         try {
             Jwts.parserBuilder().setSigningKey(secretKey).build().parse(token);
+            return true;
         } catch (MalformedJwtException
                  | ExpiredJwtException
                  | UnsupportedJwtException
-                 | IllegalArgumentException exception) {
+                 | IllegalArgumentException e) {
+            log.error("JWT validation error: {}", e.getMessage());
+            return false;
         }
-        return true;
     }
 
     @Override
     public String getEmailFromJwtToken(String token) {
-        return Jwts.parser()
+        Claims claims = Jwts.parserBuilder()
                 .setSigningKey(secretKey)
+                .build()
                 .parseClaimsJws(token)
-                .getBody()
-                .get("mail", String.class);
+                .getBody();
+
+        // Try both the subject and the "mail" claim
+        String email = claims.getSubject();
+        if (email == null || email.isEmpty()) {
+            email = claims.get("mail", String.class);
+        }
+        return email;
     }
 
     private Map<String, Object> getClaims(SecurityUserDetails userDetail) {
@@ -62,8 +73,7 @@ public class JwtTokenServiceImpl implements JwtTokenService {
         Map<String, Object> claims = new HashMap<>();
         claims.put("userId", userDetail.getId());
         claims.put("mail", userDetail.getEmail());
-        claims.put("phone", userDetail.getPhone());
-        claims.put("roles", roles.get(0));
+        claims.put("roles", roles.getFirst());
         return claims;
     }
 }
